# white-bird-engine-core

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  NOTICE  README.md  README.zh-Hans.md  build-debug  build-deploy  build-release  build.py  build_config.py  build_setup.py  check_license_headers.py  requirements.txt  run-tests  run_tests.py
.github/workflows/: c-cpp.yml
build_script/: on_build.py  utils.py
build_script/reflection/: code_gen.py  metadata_types.py  metaparser.py  reflect.py
build_script/resource/acp/: exporter.py  linker.py
dependencies/maple-font/: README.md
include/core/: core_utils.hh  engine_core.hh
include/core/allocator/: allocator.hh  heap_allocator.hh  heap_allocator_aligned.hh  heap_allocator_aligned_pool.hh  heap_allocator_aligned_pool_impl_list.hh  heap_allocator_aligned_ram.hh  heap_allocator_atomic_aligned_pool.hh  heap_allocator_atomic_aligned_pool_impl_list.hh  heap_allocator_fixed_size_pool.hh  heap_allocator_pool.hh  heap_allocator_ram.hh  stack_allocator.hh
include/core/cla/: cla_ast.hh  cla_ast_visitor.hh  cla_lexer.hh  cla_parser.hh  cla_utils.hh
include/core/clock/: clock.hh
include/core/container/: atomic_array_list.hh
include/core/debug_utils/: debug_mutex.hh
include/core/engine_config/: engine_config.hh  engine_config_file_parser.hh
include/core/job/: job.hh  job_buffer.hh  job_buffer_ring_spsc.hh
include/core/logging/: log.hh  log_stream.hh  logging_manager.hh
include/core/memory/: reference_raw.hh  reference_strong.hh  reference_weak.hh  stack_obj.hh  unique.hh
include/core/object/: object.hh
include/core/parser/: parser.hh  parser_json.hh  parser_yaml.hh
include/core/profiling/: profiler.hh  profiling_manager.hh
include/core/reflection/: reflection_defs.hh  serializable.hh
include/core/serializer/: serializer.hh  serializer_json.hh  serializer_yaml.hh
include/core/surface/: 2d_primitive.hh  2d_surface_utils.hh  3d_primitive.hh  primitive_slots.hh
include/core/task/: task.hh  task_buffer.hh  task_buffer_ring_spsc.hh
include/global/: global.hh  stl_allocator.hh
include/platform/file_system/: directory.hh  file_system.hh  path.hh
include/platform/os/: os.hh
include/utils/: defs.hh  game_metadata.hh  utils.hh
include/utils/interface/: command.hh  singleton.hh
res/assets/fonts/maple-font/: config.json
res/assets/meshes/: cube.json
res/config/: engine_config.yaml  game_config.yaml
res/res_chunks/: global_resources.json
res/shaders/: main_pipeline_frag.hlsl  main_pipeline_pixl.hlsl  main_pipeline_vert.hlsl
src/core/: CMakeLists.txt  engine_core.cpp
src/core/allocator/: CMakeLists.txt  heap_allocator_aligned_pool.cpp  heap_allocator_aligned_pool_impl_list.cpp  heap_allocator_atomic_aligned_pool.cpp  heap_allocator_atomic_aligned_pool_impl_list.cpp  heap_allocator_fixed_size_pool.cpp  heap_allocator_pool.cpp  heap_allocator_ram.cpp
src/core/cla/: CMakeLists.txt  cla_ast.cpp  cla_ast_visitor.cpp  cla_parser.cpp
src/core/engine_config/: CMakeLists.txt
src/core/logging/: CMakeLists.txt  log.cpp  log_stream.cpp
src/core/profiling/: CMakeLists.txt  profiling_manager.cpp
src/core/task/: CMakeLists.txt  task_buffer_ring_spsc.cpp
src/core/utils/: CMakeLists.txt
src/global/: CMakeLists.txt  global.cpp
src/platform/: CMakeLists.txt
src/platform/file_system/: CMakeLists.txt  directory.cpp  path.cpp
src/platform/linux/: CMakeLists.txt  file_system.cpp  os.cpp
src/platform/macos/: CMakeLists.txt  file_system.cpp  os.cpp
src/platform/windows/: CMakeLists.txt  file_system.cpp  os.cpp
templates/: benchmark.cmake.jinja  component_access.hh.jinja  component_sd.gen.hh.jinja  component_sd.hh.jinja  executable_test.cmake.jinja  integration_test.cmake.jinja  label_manager.hh.jinja  serializable_impl.cpp.jinja  serializables_access.hh.jinja  serializables_sd.hh.jinja  type_uuid.hh.jinja  unit_test.jinja
test_env/res/config/: game_config.yaml
test_env/res/test_text_files/: test_file_utf8.txt
test_script/: run_tests.py
tests/: CMakeLists.txt
tests/benchmark/core/allocator/: allocator_benchmark.cpp
tests/core/: CMakeLists.txt
tests/core/allocator_test/: CMakeLists.txt  heap_allocator_align_pool_test.hh  heap_allocator_aligned_pool_impl_list_test.hh  heap_allocator_atomic_aligned_pool_test.hh  heap_allocator_fixed_size_pool_test.hh  heap_allocator_pool_test.hh  heap_allocator_test.cpp  stack_allocator_test.hh  test_utilities.hh
tests/core/benchmark/: CMakeLists.txt
tests/core/benchmark/allocator/: CMakeLists.txt  allocator_benchmark.cpp  generate.json
tests/core/cla_test/: CMakeLists.txt  cla_ast_visitor_assembler_test.hh  cla_ast_visitor_test.hh  cla_lexer_test.hh  cla_parser_test.hh  cla_test.cpp
tests/core/core/: CMakeLists.txt
tests/core/core/unit/: CMakeLists.txt
tests/core/intergration/: CMakeLists.txt  generate.json  wbe_core_integration_test.cpp
tests/core/logging_test/: CMakeLists.txt  log_stream_test.cpp  log_stream_test.hh  logging_manager_test.hh
tests/core/memory_test/: CMakeLists.txt  ref_raw_test.hh  ref_strong_test.hh  ref_test.cpp  ref_weak_test.hh  unique_test.hh
tests/core/parser_test/: CMakeLists.txt  parser_test.cpp  parser_test_general.hh  parser_yaml_test.hh
tests/core/profiler_test/: CMakeLists.txt  profiler_test.cpp  profiler_test.hh
tests/core/serializer_test/: CMakeLists.txt  serializer_json_test.hh  serializer_yaml_test.hh
tests/core/surface_test/: 2d_surface_utils_test.hh  CMakeLists.txt  surface_test.cpp
tests/core/unit/: CMakeLists.txt
tests/core/unit/cla_test/: generate.json
tests/platform/: CMakeLists.txt
tests/platform/linux/: CMakeLists.txt  file_system_test.hh  generate.json
tests/platform/macos/: CMakeLists.txt  file_system_test.hh  generate.json
tests/platform/windows/: CMakeLists.txt  file_system_test.hh  generate.json  windows_platform_test.cpp
tests/unit/global/: global_test.cpp  stl_allocator_test.hh
tests/unit/platform/: linux_file_system_test.hh  windows_platform_test.cpp
tests/unit/utils_test/: type_metadata_test.hh
tests/utils_test/: CMakeLists.txt  generate.json  utils_test.cpp
(+81 files in other folders)
