# Copyright 2025 OppositeNor
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
file(GLOB wbe_core_src ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

add_subdirectory(allocator)
add_subdirectory(cla)
add_subdirectory(logging)
add_subdirectory(profiling)
add_subdirectory(engine_config)

add_library(WBE_CORE
    ${wbe_core_src}
)

target_link_libraries(WBE_CORE PUBLIC
    WBE_PLATFORM
    ${libs}
)
